<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:padding="@dimen/small_padding"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:id="@+id/image_details_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/small_padding"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingTop="@dimen/detail_padding_top"
                    android:id="@+id/tv_release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label"
                    android:textStyle="bold"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info" />

                <TextView
                    android:paddingTop="@dimen/detail_padding_top"
                    android:id="@+id/tv_vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label"
                    android:textStyle="bold"
                    android:text="@string/rate" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/small_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="@dimen/detail_padding_top"
                android:id="@+id/tv_overview_label"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/label"
                android:layout_height="wrap_content"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_overview"
                android:textSize="@dimen/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/detail_padding_top"
                android:id="@+id/tv_videos_label"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/label"
                android:layout_height="wrap_content"
                android:text="@string/videos" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_weight= "1"
                android:layout_height="0dp"
                android:orientation="vertical" />

            <TextView
                android:paddingTop="@dimen/detail_padding_top"
                android:id="@+id/tv_review_label"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/label"
                android:layout_height="wrap_content"
                android:text="@string/review" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>